--- a/1_Глава_Первые_шаги.md
+++ b/1_Глава_Первые_шаги.md
@@ -1,6 +1,6 @@
 # Первые шаги
 
-### Запуск первого образа
+## Запуск первого образа
 
 Для проверки правильности установки Docker выполните следующие команды:
 ```shell
@@ -138,4 +138,122 @@ $
 ```
 После этой команды `exit` завершит работу и сам контейнер. 
 
-Если выполнить команду `docker ps`, то мы не увидим ни одного работающего контейнера. 
+Если выполнить команду `docker ps`, то мы не увидим ни одного работающего контейнера.
+
+После выполнения команды `docker ps -a` выводится список всех контейнеров, влючая остановленные `stopped`,
+их еще называеют "контейнеры из которых был совершен выход" `exited containers`. Такие контейнеры могут быть
+перезаущены командой `docker start`.
+
+Чтобы избавиться от контейнера, следует воспользоваться командой `docker rm`:
+```shell
+$ docker rm happy_bardeen
+happy_bardeen
+```
+
+> Удаление остановленых контейнеров
+> Если нужно удалить все остановленные контейнеры, можно использовать результат
+> выполнения команды `docker ps -aq -f status=exited` которая выводит резульаты всех остановленых
+> контейнеров. Например:
+> `docker rm -v $(docker ps -aq -f status=exited)`
+> аргумент `-v` позволяет удалить все тома (разделы), управляемые Docker, на которые ссылаются какие-либо
+> другие контейнеры.
+> Избежать перезапуска ранее остановленых контейнеров можно, включив в команду `docker run` флаг `--rm`, который
+> позволяет удалить остановленный контейнер и созданную на время его существования соответсвтующую файловую систему.
+
+Теперь создадим приложение cowsay, работающее внутри Docker.
+
+```shell
+$ docker run -it --name cowsay --hostname cowsay debian bash
+root@cowsay:/# apt-get update
+Get:1 http://security.debian.org/debian-security bullseye-security InRelease [44.1 kB]
+...
+Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [2300 B]                                                                                                                                                 
+Fetched 8454 kB in 10s (827 kB/s)                                                                                                                                                                                                
+Reading package lists... Done
+root@cowsay:/# 
+
+# Приступаем к работе:
+root@cowsay:/# /usr/games/forune | /usr/games/cowsay
+ __
+<  >
+ --
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+```
+Сохраним этот контейнер. Для превращений контейнера в образ, нужно всего лишь выполнить команду
+`docker commit`. При этом не имеет значения, работает контейнер или он остановлен. Необходимо 
+передать в команду имя контейнера `cowsay`, имя для создаваемого образа `cowsay image`, а так же 
+имя репозитория, в котором образ будет сохранен `test`.
+
+```shell
+root@cowsay:/# exit 
+exit
+
+$ docker commit cowsay test/cowsayimage
+sha256:7f536d2629a95bc63cec0999629413a015e60a6ab82f5b2090272b9c44ba84ea
+```
+Возвращаемое командой значение представляет собой уникальный идентификатор созданного образа. Теперь 
+у нас есть образ с предустановленным приложением cowsay, который мы можем запускать в любое время:
+
+```shell
+$ docker run test/cowsayimage /usr/games/cowsay "Moo"
+ _____
+< Moo >
+ -----
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+```
+Имеются некоторые затруднения. Если нужно что-то изменить, то нам придется вручную повторить все ранее 
+проделанные операции. Например, если потребуется использовать другой основной образ ОС, то нам придется
+выполнить процедуру с самого начала. Решение проблемы является в создании Dockerfile для создания образа
+и автоматизированного повторного воспроизведения этой процедуры. 
+
+## Создание образов из файлов Dockerfile
+
+Dockerfile - это обычный текстовый файл, содержащий набор операций, которые могут быть использованы 
+для создания Docker-образа. Сначала создадим новый каталог и Dockerfile:
+
+```shell
+$ mkdir cowsay
+$ cd cowsay
+$ touch Dockerfile
+```
+Затем в Dockerfile добавим следующее содержимое:
+
+`FROM debian:wheezy`\
+`RUN apt-get update && apt-get install -y cowsay fortune`
+
+* Инструкция `FROM` определяет базовый образ ОС, конкретной версией `wheezy`.
+* Инструкция `FROM` является строго обязательной для всех файлов Dockerfile как самая первая.
+* Инструкции `RUN` определяют команды, выполняемые в командной оболочке внутри данного образа.
+
+Теперь мы можем создать образ, выполнив команду `docker build` в том же каталоге, где наш Dockerfile:
+```shell
+$ docker build -t test/cowsay-dockerfile .
+Step 1/2 : FROM debian:latest
+ ---> f776cfb21b5e
+Step 2/2 : RUN apt-get update && apt-get install -y cowsay fortune
+ ---> Running in b669ee1f3752
+...
+Successfully tagged test/cowsay-dockerfile:latest
+
+$ sudo docker run test/cowsay-dockerfile /usr/games/cowsay "Moo"
+ _____
+< Moo >
+ -----
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+```
+После этого мы можем запускать образ точно таким же способом, как раньше:
+```shell
+$ docker run test/cowsay-dockerfile /usr/games/cowsay "Moo"
+```
