--- a/1_Глава_Первые_шаги.md
+++ b/1_Глава_Первые_шаги.md
@@ -1,6 +1,6 @@
 # Первые шаги
 
-[sda](##Создание_образов_из_файлов_Dockerfile)
+[sda](#Создание_образов_из_файлов_Dockerfile)
 
 ## Запуск первого образа
 
