--- a/1_Глава_Первые_шаги.md
+++ b/1_Глава_Первые_шаги.md
@@ -1,6 +1,6 @@
 # Первые шаги
 
-[Создание образов из файлов Dockerfile](#Создание-образов-из-файлов-Dockerfile)
+[Создание образов из файлов Dockerfile](#-создание-образов-из-файлов-Dockerfile)
 
 ## Запуск первого образа
 
@@ -216,7 +216,7 @@ $ docker run test/cowsayimage /usr/games/cowsay "Moo"
 выполнить процедуру с самого начала. Решение проблемы является в создании Dockerfile для создания образа
 и автоматизированного повторного воспроизведения этой процедуры. 
 
-## Создание_образов_из_файлов_Dockerfile
+## Создание образов из файлов Dockerfile
 
 Dockerfile - это обычный текстовый файл, содержащий набор операций, которые могут быть использованы 
 для создания Docker-образа. Сначала создадим новый каталог и Dockerfile:
