add: anchor test

--- a/1_Глава_Первые_шаги.md
+++ b/1_Глава_Первые_шаги.md
@@ -1,6 +1,6 @@
 # Первые шаги
 
-[Создание образов из файлов Dockerfile](##Создание-образов-из-файлов-Dockerfile)
+[Создание образов из файлов Dockerfile](#Создание-образов-из-файлов-Dockerfile)
 
 ## Запуск первого образа
 
