add: anchor for 1ch

--- a/1_Глава_Первые_шаги.md
+++ b/1_Глава_Первые_шаги.md
@@ -1,6 +1,10 @@
+[Запуск первого образа](#Запуск-первого-образа)<br>
+[Создание образов из файлов Dockerfile](#Создание-образов-из-файлов-Dockerfile)<br>
+[Работа с реестрами](#Работа-с-реестрами)<br>
+[Использование официального образа Redis](#Использование-официального-образа-Redis)<br>
+<br>
+***
 # Первые шаги
-
-[Создание образов из файлов Dockerfile](#Создание-образов-из-файлов-Dockerfile)
 
 ## Запуск первого образа
 
